Avoid horizontal scrollbars in MIGX modals with nested grid

--- a/assets/components/romanescobackyard/css/manager.css
+++ b/assets/components/romanescobackyard/css/manager.css
@@ -9,3 +9,10 @@ div[id*="modx-grid-multitvdbgrid"] .x-btn-group-tl div,
     float: right;
     margin-top: 4px;
 }
+
+/* ExtJS calculations for grid width are slightly off.
+ * Adjusted here to avoid horizontal scrolling and will be reset in manager.js.
+ */
+div[id*="modx-window-mi-grid-update-"] .x-panel.x-grid-panel {
+    width: 97%;
+}
